Update python_prectice.ipynb with latest changes

--- a/pythob_With_Ansh_Lamba/python_prectice.ipynb
+++ b/pythob_With_Ansh_Lamba/python_prectice.ipynb
@@ -947,7 +947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "id": "d4d82f2c-8a8d-406a-b35a-77955ae40f7f",
    "metadata": {},
    "outputs": [
@@ -955,23 +955,78 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<map object at 0x000001C3CED164D0>\n"
+      "[None, 4, None, 16, None]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#here we can pass individual number and list also \n",
+    "# mostly we use filter \n",
+    "my_list=[1,2,3,4,5]\n",
+    "\n",
+    "def square(x):\n",
+    "    if(x%2 == 0):\n",
+    "        return x*x\n",
+    "result = list(map(square, my_list))\n",
+    "print(result)\n",
+    " "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "edc43b8a-f9b2-4d33-9fbc-b50cf74a31c6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 4]\n"
      ]
     }
    ],
    "source": [
     "#here we can pass individual number and list also\n",
+    "my_list=[1,2,3,4,5]\n",
+    "\n",
     "def square(x):\n",
-    "    return x*x\n",
-    "my_list=[1,2,3,4,5,6,7]    \n",
-    "result = map(square,my_list)\n",
+    "    if(x%2 == 0):\n",
+    "        return x*x\n",
+    "result = list(filter(square, my_list))\n",
+    "print(result)\n",
+    " "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "62dbe5b5-d8ef-46b9-aa08-c91820b35f1c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15\n"
+     ]
+    }
+   ],
+   "source": [
+    "from functools import reduce\n",
+    "\n",
+    "my_list=[1,2,3,4,5]\n",
+    "\n",
+    "def add(x,y):\n",
+    "    return x+y\n",
+    "result = reduce(add, my_list)   \n",
     "print(result)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "62dbe5b5-d8ef-46b9-aa08-c91820b35f1c",
+   "id": "d1701ec5-f084-4fe3-b3d4-d96725cba05c",
    "metadata": {},
    "outputs": [],
    "source": []
