--- a/pythob_With_Ansh_Lamba/python_prectice.ipynb
+++ b/pythob_With_Ansh_Lamba/python_prectice.ipynb
@@ -1024,9 +1024,333 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "abd4bee4-72f1-4887-b361-6c3b99f3ede3",
+   "metadata": {},
+   "source": [
+    "Exceptional Handling"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "1576151d-fa39-4ea8-a5b5-f2a1041b5172",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'>' not supported between instances of 'str' and 'int'\n",
+      "my next line of code continue without interruption\n"
+     ]
+    }
+   ],
+   "source": [
+    "x=\"10\"\n",
+    "try:\n",
+    "    if(x>10):\n",
+    "        print(x)\n",
+    "    else:\n",
+    "        print(\"Bla Bla\")\n",
+    "except Exception as e:\n",
+    "    print(e)\n",
+    "\n",
+    "print(\"my next line of code continue without interruption\")    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "a26cbf85-fc74-4dee-8c1e-96df817344c1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello! my firstname is Mohd, and lastname Asad\n"
+     ]
+    }
+   ],
+   "source": [
+    "# formatting string\n",
+    "first_name=\"Mohd\"\n",
+    "last_name=\"Asad\"\n",
+    "\n",
+    "my_string=f\"Hello! my firstname is {first_name}, and lastname {last_name}\"\n",
+    "\n",
+    "print(my_string)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "7fd39253",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hey! you got this error- '>' not supported between instances of 'str' and 'int'\n",
+      "my next line of code continue without interruption\n"
+     ]
+    }
+   ],
+   "source": [
+    "x=\"10\"\n",
+    "try:\n",
+    "    if(x>10):\n",
+    "        print(x)\n",
+    "    else:\n",
+    "        print(\"Bla Bla\")\n",
+    "except Exception as e:\n",
+    "    print(f\"hey! you got this error- {e}\")\n",
+    "\n",
+    "print(\"my next line of code continue without interruption\")    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0153055e-9188-42ae-9014-a981c36b8ec1",
+   "metadata": {},
+   "source": [
+    "please focus on two thing when pyhton sees return keyword means job done goto backtrack  finally cmd always run"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "b584639c-cee2-48e2-adcf-1bf473211a8e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "just for check hey! i am finally i am always run\n"
+     ]
+    }
+   ],
+   "source": [
+    "def my_func(x):\n",
+    "    try:\n",
+    "        if(x%2 == 0):\n",
+    "            return 1\n",
+    "    except Exception as e:      \n",
+    "            return e\n",
+    "    finally:\n",
+    "        print(\"just for check hey! i am finally i am always run\")\n",
+    "        \n",
+    "my_func(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "e744b136-f596-4d3e-9dcc-3984cbd4b53a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "x=10\n",
+    "#this one is global\n",
+    "def to_check_priority_of_variable():\n",
+    "    x=5 # this is local it takes priorirty\n",
+    "    print(x)\n",
+    "\n",
+    "to_check_priority_of_variable()    "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d1701ec5-f084-4fe3-b3d4-d96725cba05c",
+   "id": "7b43bebe-a489-49fa-aecb-42403e81a07c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "we can raise error like TypeError ValueError Exception"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "94b71528-33ee-419d-a6fa-75c88535785e",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "Only integers are allowed",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[19]\u001b[39m\u001b[32m, line 4\u001b[39m\n\u001b[32m      1\u001b[39m x = \u001b[33m\"\u001b[39m\u001b[33mhello\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m      3\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28mtype\u001b[39m(x) \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28mint\u001b[39m:\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m(\u001b[33m\"\u001b[39m\u001b[33mOnly integers are allowed\u001b[39m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[31mTypeError\u001b[39m: Only integers are allowed"
+     ]
+    }
+   ],
+   "source": [
+    "x = \"hello\"\n",
+    "\n",
+    "if not type(x) is int:\n",
+    "    raise TypeError(\"Only integers are allowed\")\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "c5ebba13-10e6-4c4a-a6b4-97a1947b80e9",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "Value < 1 is not allowed",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[20]\u001b[39m\u001b[32m, line 4\u001b[39m\n\u001b[32m      1\u001b[39m x=\u001b[32m0\u001b[39m\n\u001b[32m      3\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m(x<\u001b[32m1\u001b[39m):\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[33m\"\u001b[39m\u001b[33mValue < 1 is not allowed\u001b[39m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[31mValueError\u001b[39m: Value < 1 is not allowed"
+     ]
+    }
+   ],
+   "source": [
+    "x=0\n",
+    "\n",
+    "if(x<1):\n",
+    "    raise ValueError(\"Value < 1 is not allowed\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f20348d7-31c8-4dff-8b07-d525189aab02",
+   "metadata": {},
+   "source": [
+    "enumerate is very importent"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "8d7f52c8-9177-47d8-9da2-359938948299",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100\n",
+      "200\n",
+      "300\n",
+      "400\n",
+      "500\n",
+      "600\n",
+      "700\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_list=[100, 200, 300, 400, 500, 600, 700]\n",
+    "\n",
+    "for i in my_list:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "5d50ea49",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0, 100)\n",
+      "(1, 200)\n",
+      "(2, 300)\n",
+      "(3, 400)\n",
+      "(4, 500)\n",
+      "(5, 600)\n",
+      "(6, 700)\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_list=[100, 200, 300, 400, 500, 600, 700]\n",
+    "\n",
+    "for i in enumerate(my_list):\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "3efd7c6b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_list=[100, 200, 300, 400, 500, 600, 700]\n",
+    "\n",
+    "for i,x in enumerate(my_list):\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "1ed906ff",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100\n",
+      "200\n",
+      "300\n",
+      "400\n",
+      "500\n",
+      "600\n",
+      "700\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_list=[100, 200, 300, 400, 500, 600, 700]\n",
+    "\n",
+    "for i,x in enumerate(my_list):\n",
+    "    print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fbcf62ad-f880-46d6-b76c-b207661fd950",
    "metadata": {},
    "outputs": [],
    "source": []
