--- a/pythob_With_Ansh_Lamba/python_prectice.ipynb
+++ b/pythob_With_Ansh_Lamba/python_prectice.ipynb
@@ -1349,8 +1349,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "fbcf62ad-f880-46d6-b76c-b207661fd950",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mohd Macca\n"
+     ]
+    }
+   ],
+   "source": [
+    "class employee():\n",
+    "    name=\"Mohd\"\n",
+    "    city=\"Macca\"\n",
+    "\n",
+    "    def info():\n",
+    "        print(f\"The name is{name}and city {city}\")\n",
+    "\n",
+    "emp1 = employee()        \n",
+    "\n",
+    "print(emp1.name, emp1.city)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "6865061c-f75b-46ba-9b83-e9a7a4478886",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The name isMohdand city Macca\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "class employee():\n",
+    "    name=\"Mohd\"\n",
+    "    city=\"Macca\"\n",
+    "\n",
+    "    def info(self):\n",
+    "        print(f\"The name is{self.name}and city {self.city}\")\n",
+    "\n",
+    "emp1 = employee()        \n",
+    "\n",
+    "#if you want to call method \n",
+    "print(emp1.info())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "3ebceef3-f546-4d03-8712-5b8ac0dd6273",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The name is Mohd and city is Bijnor\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "class employee():\n",
+    "    name=\"Mohd\"\n",
+    "    city=\"Macca\"\n",
+    "\n",
+    "    def info(self,name,city):\n",
+    "        print(f\"The name is {name} and city is {city}\")\n",
+    "\n",
+    "emp1 = employee()        \n",
+    "\n",
+    "#if you want to call method \n",
+    "print(emp1.info(\"Mohd\",\"Bijnor\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "72639ced-19c9-47f7-9233-fc497e8bcdbe",
    "metadata": {},
    "outputs": [],
    "source": []
